# PyArgoCD

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
kubernetes/: __init__.py  client.py  config.py
pyargocd/: __init__.py  client.py
requests/: __init__.py
tests/: test_client.py
